Regression(r254856) Family Health iOS app is broken due to lack for WebSQL support https://bugs.webkit.org/show_bug.cgi?id=211896 <rdar://problem/63025045>

Reviewed by Maciej Stachowiak.

Source/WebCore:

Add RuntimeApplicationChecks function to identify Family Health app on iOS.

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isFamilyHealthApp):

Source/WebKitLegacy/mac:

Re-enable WebSQL support for Family Health iOS app with a linked-on-after check.

* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):

Source/WTF:

* wtf/spi/darwin/dyldSPI.h:


Canonical link: https://commits.webkit.org/224792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261695 268f45cc-cd09-0410-ab3c-d52691b4dbfc